@@ -2,7 +2,6 @@ package seedu.address.storage;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -12,6 +11,8 @@ import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.ReadOnlyAddressBook;
 import seedu.address.model.person.Person;
+import seedu.address.model.relationship.Relationship;
+import seedu.address.model.event.Event;
 
 /**
  * An Immutable AddressBook that is serializable to JSON format.
@@ -20,15 +21,28 @@ import seedu.address.model.person.Person;
 class JsonSerializableAddressBook {
 
     public static final String MESSAGE_DUPLICATE_PERSON = "Persons list contains duplicate person(s).";
+    public static final String MESSAGE_DUPLICATE_RELATIONSHIP = "Relationships list contains duplicate relationship(s).";
+    public static final String MESSAGE_DUPLICATE_EVENT = "Events list contains duplicate event(s).";
 
     private final List<JsonAdaptedPerson> persons = new ArrayList<>();
+    private final List<JsonAdaptedRelationship> relationships = new ArrayList<>();
+    private final List<JsonAdaptedEvent> events = new ArrayList<>();
 
     /**
-     * Constructs a {@code JsonSerializableAddressBook} with the given persons.
+     * Constructs a {@code JsonSerializableAddressBook} with the given persons, relationships and events.
      */
     @JsonCreator
-    public JsonSerializableAddressBook(@JsonProperty("persons") List<JsonAdaptedPerson> persons) {
+    public JsonSerializableAddressBook(
+            @JsonProperty("persons") List<JsonAdaptedPerson> persons,
+            @JsonProperty("relationships") List<JsonAdaptedRelationship> relationships,
+            @JsonProperty("events") List<JsonAdaptedEvent> events) {
         this.persons.addAll(persons);
+        if (relationships != null) {
+            this.relationships.addAll(relationships);
+        }
+        if (events != null) {
+            this.events.addAll(events);
+        }
     }
 
     /**
@@ -37,7 +51,11 @@ class JsonSerializableAddressBook {
      * @param source future changes to this will not affect the created {@code JsonSerializableAddressBook}.
      */
     public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
-        persons.addAll(source.getPersonList().stream().map(JsonAdaptedPerson::new).collect(Collectors.toList()));
+        persons.addAll(source.getPersonList().stream().map(JsonAdaptedPerson::new).toList());
+        relationships.addAll(source.getRelationshipList().stream()
+                .map(JsonAdaptedRelationship::new).toList());
+        events.addAll(source.getEventList().stream()
+                .map(JsonAdaptedEvent::new).toList());
     }
 
     /**
@@ -47,6 +65,8 @@ class JsonSerializableAddressBook {
      */
     public AddressBook toModelType() throws IllegalValueException {
         AddressBook addressBook = new AddressBook();
+
+        // Convert persons
         for (JsonAdaptedPerson jsonAdaptedPerson : persons) {
             Person person = jsonAdaptedPerson.toModelType();
             if (addressBook.hasPerson(person)) {
@@ -54,7 +74,25 @@ class JsonSerializableAddressBook {
             }
             addressBook.addPerson(person);
         }
+
+        // Convert relationships
+        for (JsonAdaptedRelationship jsonAdaptedRelationship : relationships) {
+            Relationship relationship = jsonAdaptedRelationship.toModelType();
+            if (addressBook.hasRelationship(relationship)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_RELATIONSHIP);
+            }
+            addressBook.addRelationship(relationship);
+        }
+
+        // Convert events
+        for (JsonAdaptedEvent jsonAdaptedEvent : events) {
+            Event event = jsonAdaptedEvent.toModelType();
+            if (addressBook.hasEvent(event)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_EVENT);
+            }
+            addressBook.addEvent(event);
+        }
+
         return addressBook;
     }
-
 }
